--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,6 +7,7 @@
     --warning: #ea2027;
     --success: #009432;
     --font-family: 'Open Sans', sans-serif;
+    --font-size-small: 15px;
     --box-shadow: 0 1px 2px 0 rgb(60 64 67 / 30%), 0 1px 3px 1px rgb(60 64 67 / 15%);
     --border-radius: 3px;
     --border: 1px solid #ddd;
@@ -15,6 +16,8 @@
     --gray: #636466;
     --gray-dark: #444;
     --gray-light: #ddd;
+    --footer-bg: #0a3d62;
+    
 }
 
 /* reset */
@@ -76,8 +79,8 @@ h1,h2,h3,h4,h5 {
 }
 
 /* Margins */
-.m-5 {
-    margin: 5px;
+.mr-5 {
+    margin-right: 5px;
 }
 
 .m-10 {
@@ -86,6 +89,18 @@ h1,h2,h3,h4,h5 {
 
 .m-20 {
     margin: 20px;
+}
+
+.m-5 {
+    margin: 5px;
+}
+
+.mr-20 {
+    margin-right: 20px;
+}
+
+.mr-50 {
+    margin-right: 50px;
 }
 
 /* Paddings */
@@ -99,6 +114,14 @@ h1,h2,h3,h4,h5 {
 
 .p-20 {
     padding: 20px;
+}
+
+.py-20 {
+    padding: 20px 0;
+}
+
+.py-50 {
+    padding: 50px 0;
 }
 
 ul {
@@ -165,7 +188,28 @@ header {
 
 }
 
+/* FOOTER */
+footer {
+    background-color: var(--footer-bg);
+    color: white;
+}
+
 /* SIDEBAR */
 .sidebar {
     min-width: 200px;
+}
+
+.sidebar-nav li {
+    padding: 10px;
+    cursor: pointer;
+    font-size: var(--font-size-small);
+    transition: opacity .4s;
+}
+
+.sidebar-nav li:hover {
+    opacity: .8;
+}
+
+.sidebar-nav li i {
+    color: var(--color-dark);
 }
