--- a/public/css/style.css
+++ b/public/css/style.css
@@ -48,6 +48,12 @@ a {
 ul {
     list-style: none;
 }
+
+small {
+    font-size: small;
+    font-family: var(--font-family);
+}
+
 /* Flex */
 .d-flex {
     display: flex;
@@ -135,6 +141,10 @@ ul {
     padding: 20px 0;
 }
 
+.pb-20 {
+    padding-bottom: 20px;
+}
+
 .py-50 {
     padding: 50px 0;
 }
@@ -173,6 +183,25 @@ ul {
     border-radius: var(--border-radius);
     background-color: white;
     box-shadow: var(--box-shadow);
+}
+
+.avatar-small {
+    width: 45px;
+    border-radius: 50%;
+}
+
+.clickable {
+    color: var(--primary);
+    font-weight: var(--font-weight-semi-bold);
+    cursor: pointer;
+}
+
+.rating-up {
+    color: var(--success);
+}
+
+.rating-down {
+    color: var(--warning);
 }
 
 /* GENERAL */
@@ -272,4 +301,9 @@ footer {
 .active {
     font-weight: bold;
     color: var(--primary);
+}
+
+/* QUESTION */
+.question-content {
+    border-bottom: 1px solid var(--gray);
 }
