--- a/public/css/style.css
+++ b/public/css/style.css
@@ -204,6 +204,21 @@ small {
     color: var(--warning);
 }
 
+/* MESSAGE FLASH */
+.flash {
+    padding: 20px;
+    text-align: center;
+    color: white;
+}
+
+.flash-sucess {
+    background-color: var(--success);
+}
+
+.flash-error {
+    background-color: var(--warning);
+}
+
 /* GENERAL */
 .content {
     max-width: 1200px;
