--- a/public/css/style.css
+++ b/public/css/style.css
@@ -124,6 +124,10 @@ small {
     margin-right: 50px;
 }
 
+.ml-auto {
+    margin-left: auto;
+}
+
 /* Paddings */
 .p-5 {
     padding: 5px;
@@ -143,6 +147,10 @@ small {
 
 .pb-20 {
     padding-bottom: 20px;
+}
+
+.pb-30 {
+    padding-bottom: 30px;
 }
 
 .py-50 {
@@ -185,6 +193,11 @@ small {
     box-shadow: var(--box-shadow);
 }
 
+.avatar {
+    width: 80px;
+    border-radius: 50%;
+}
+
 .avatar-small {
     width: 45px;
     border-radius: 50%;
@@ -202,6 +215,11 @@ small {
 
 .rating-down {
     color: var(--warning);
+}
+
+.separator {
+    border-bottom: 1px solid var(--gray-light);
+    margin: 30px 0px;
 }
 
 /* MESSAGE FLASH */
