--- a/public/css/style.css
+++ b/public/css/style.css
@@ -112,6 +112,10 @@ small {
     margin: 5px;
 }
 
+.mr-10 {
+    margin-right: 10px;
+}
+
 .mr-20 {
     margin-right: 20px;
 }
@@ -143,6 +147,10 @@ small {
 
 .py-20 {
     padding: 20px 0;
+}
+
+.pb-10 {
+    padding-bottom: 10px;
 }
 
 .pb-20 {
@@ -339,4 +347,9 @@ footer {
 /* QUESTION */
 .question-content {
     border-bottom: 1px solid var(--gray);
+}
+
+/* RATING */
+.fa-thumbs-up, fa-thumbs-down {
+    margin: 10px 0;
 }
