--- a/templates/question/show.html.twig
+++ b/templates/question/show.html.twig
@@ -13,9 +13,13 @@
     <div class="block">
         <div class="d-flex flex-row-nowrap align-items-center pb-30">
             {% include "/partials/_rating.html.twig" with {rating: question.rating, from: 'question', id: question.id} %}
-            <h3>{{question.title}}</h3>
-            <div class="question-tag">QUESTION</div>
-            <img src="{{question.author.image}}" alt="Avatar" class="avatar ml-auto">
+            <div class="d-flex flex-row-nowrap flex-fill">
+                <h3>{{question.title}}</h3>
+                <div class="question-tag">QUESTION</div>
+            </div>
+            <a href="{{path('profile_user', {id: question.author.id})}}">
+                <img src="{{question.author.image}}" alt="Avatar" class="avatar ml-auto">
+            </a>
         </div>
         <p class="question-text">{{question.content}}</p>
         
@@ -38,8 +42,10 @@
                 {% include "/partials/_rating.html.twig" with {rating: comment.rating, from: 'comment', id: comment.id } %}
                 <div class="d-flex flex-column w-100">
                     <div class="d-flex flex-row-nowrap align-items-center pb-10">
-                        <img src="{{comment.author.image}}" alt="avatar" class="avatar-small mr-10">
-                        <p class="clickable">{{comment.author.fullname}} </p>
+                        <a href="{{path('profile_user', {id:comment.author.id})}}" class="d-flex flex-row-nowrap align-items center">
+                            <img src="{{comment.author.image}}" alt="avatar" class="avatar-small mr-10">
+                            <p class="clickable">{{comment.author.fullname}} </p>
+                        </a>
                         <span class="ml-auto">{{ comment.createdAt | ago(locale= 'fr') }}</span>
                     </div>
                     <p class="question-response-text">{{ comment.content }}</p>
