--- a/templates/question/show.html.twig
+++ b/templates/question/show.html.twig
@@ -1,37 +1,41 @@
 {% extends "base.html.twig" %}
 
 {% block title %}
-    {{question.title}}
+    {{ question.title }}
 {% endblock title %}
 
 {% block stylesheets %}
-    {{parent()}}
-    <link rel="stylesheet" href="{{asset("css/question_show.css")}}">
+    {{ parent() }}
+    <link rel="stylesheet" href="{{ asset('css/question_show.css')}}">
 {% endblock stylesheets %}
 
 {% block body %}
     <div class="block">
         <div class="d-flex flex-row-nowrap align-items-center pb-30">
-            {% include "/partials/_rating.html.twig" with {rating: question.rating, from: 'question', id: question.id} %}
+            {% include "partials/_rating.html.twig" with {rating: question.rating, from: 'question', id: question.id} %}
             <div class="d-flex flex-row-nowrap flex-fill">
-                <h3>{{question.title}}</h3>
+                <h3>{{ question.title }}</h3>
                 <div class="question-tag">QUESTION</div>
             </div>
             <a href="{{path('profile_user', {id: question.author.id})}}">
                 <img src="{{question.author.image}}" alt="Avatar" class="avatar ml-auto">
             </a>
         </div>
-        <p class="question-text">{{question.content}}</p>
-        
+        <p class="question-text">{{ question.content }}</p>
+
+        {% if question.comments is not empty %}
+            <div class="separator"></div>
+        {% endif %}
+
         {% if form is defined %}
             <div class="separator"></div>
             <div class="pb-20">
-                <h4>Nombre de réponse : {{question.nbResponse}} </h4>
+                <h4>Nombre de réponses: {{question.nbResponse}}</h4>
             </div>
             <h3 class="pb-20">Votre réponse:</h3>
             <div class="comment-form">
                 {{form_start(form)}}
-                    {{form_rest(form)}}
+                    {{ form_rest(form)}}
                     <button class="btn btn-primary">Soumettre</button>
                 {{form_end(form)}}
             </div>
@@ -39,16 +43,16 @@
 
         {% for comment in question.comments %}
             <div class="question-response-elem d-flex flex-row-nowrap mb-20">
-                {% include "/partials/_rating.html.twig" with {rating: comment.rating, from: 'comment', id: comment.id } %}
+                {% include "./partials/_rating.html.twig" with {rating: comment.rating, from: 'comment', id: comment.id} %}
                 <div class="d-flex flex-column w-100">
                     <div class="d-flex flex-row-nowrap align-items-center pb-10">
-                        <a href="{{path('profile_user', {id:comment.author.id})}}" class="d-flex flex-row-nowrap align-items center">
-                            <img src="{{comment.author.image}}" alt="avatar" class="avatar-small mr-10">
-                            <p class="clickable">{{comment.author.fullname}} </p>
+                        <a class="d-flex flex-row-nowrap align-items-center" href="{{path('profile_user', {id: comment.author.id})}}">
+                            <img src="{{comment.author.image}}" alt="Avatar" class="avatar-small mr-10">
+                            <p class="clickable flex-fill">{{comment.author.fullname}}</p>
                         </a>
-                        <span class="ml-auto">{{ comment.createdAt | ago(locale= 'fr') }}</span>
+                        <span class="ml-auto">{{comment.createdAt | ago(locale= 'fr')}}</span>
                     </div>
-                    <p class="question-response-text">{{ comment.content }}</p>
+                    <p class="question-response-text">{{comment.content}}</p>
                 </div>
             </div>
         {% endfor %}
