feat: envoie d'un email de bienvenue apres l'inscription

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,6 @@
 :root {
-    --primary: #C38370;
-    --primary-light: #E4B7A0;
+    --primary: #5c77c8;
+    --primary-light: #8ea5df;
     --accent: #A45C40;
     --warning: #ea2027;
     --success: #009432;
