--- a/templates/security/signin.html.twig
+++ b/templates/security/signin.html.twig
@@ -1,35 +1,44 @@
-{% extends "base.html.twig" %}
+{% extends 'base.html.twig' %}
 
-{% block title %}Connexion{% endblock title %}
+{% block title %}
+    Connexion
+{% endblock %}
 
 {% block body %}
-<div class="block">
-    <h2 class="pb-30">Connexion</h2>
-    <form action="{{ path('signin')}}" method="post">
-        <div class="form-row">
-            <label for="email">Email</label>
-            <input type="email" name="_username" id="email" value="{{ username }}">
-        </div>
-        <div class="form-row">
-            <label for="password">Mot de passe</label>
-            <input type="password" name="_password" id="password">
-        </div>
-        <div class="form-row">
-            <label for="remember_me">
-                <input type="checkbox" name="_remember_me" id="remember_me">
-                Se souvenir de moi
-            </label>
-        </div>
-        <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
-        {% if error %}
-            <ul class="form-errors pb-20">
-                <li>{{ error.messageKey | trans(error.messageData, 'security') }}</li>
-            </ul>
-        {% endif %}
-        <button class="btn btn-primary mr-10">Se connecter</button>
-        <small>
-            <a href="{{path('signup')}}">Pas encore de compte ?</a>
-        </small>
-    </form>
-</div>
+    <div class="block">
+        <h2 class="pb-30">Connexion</h2>
+        <form action="{{path('signin')}}" method="post">
+            <div class="form-row">
+                <label for="email">Email</label>
+                <input type="email" name="_username" id="email" value="{{ username }}">
+            </div>
+            <div class="form-row">
+                <div class="d-flex flex-row-nowrap justify-content-between">
+                    <label for="password">Mot de passe</label>
+                    <small>
+                        <a href="{{path('reset-password-request')}}">Mot de passe oublié</a>
+                    </small>
+                </div>
+                <input type="password" name="_password" id="password">
+            </div>
+            <div class="form-row">
+                <label for="remember_me">
+                    <input type="checkbox" name="_remember_me" id="remember_me">
+                    Se souvenir de moi
+                </label>
+            </div>
+            <input type="hidden" name="_csrf_token" value="{{csrf_token('authenticate')}}">
+            {% if error %}
+                <ul class="form-errors pb-20">
+                    <li>{{ error.messageKey | trans(error.messagefata, 'security')}}</li>
+                </ul>
+            {% endif %}
+            <button class="btn btn-primary mr-10">Se connecter</button>
+            <small>
+                <a href="{{path('signup')}}">Pas encore de compte ?</a>
+            </small>
+            
+            
+        </form>
+    </div>
 {% endblock %}
